Bug 1339520 - Don't refresh topsites pages, only modify if needed r=sebastian
If we clear and recreate pages every time the cursor changes, we'll (A) lose
the current page position and (B) create a new RecyclerView per page, resulting
in flickering. We also need to make sure positioning is correctly handled (i.e. pages
never move, they only get added or removed).

We also switch to an ArrayList: the number of pages will be fixed for most users,
and searching an ArrayList could potentially be slightly faster than with the LinkedList.
There's little advantage to a LinkedList here.

MozReview-Commit-ID: 6NIfc2otQMV

UltraBlame original commit: 48f725d09c7a298b3a7f34f5a552749f930b2ac7