@@ -15,7 +15,8 @@ import org.mozilla.gecko.R;
 import org.mozilla.gecko.home.HomePager;
 import org.mozilla.gecko.widget.RecyclerViewClickSupport;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
+import java.util.List;
 
 
 
@@ -29,7 +30,7 @@ public class TopSitesPagerAdapter extends PagerAdapter {
     private int tilesWidth;
     private int tilesHeight;
 
-    private LinkedList<TopSitesPage> pages = new LinkedList<>();
+    private final List<TopSitesPage> pages;
 
     private final Context context;
     private final HomePager.OnUrlOpenListener onUrlOpenListener;
@@ -40,6 +41,8 @@ public class TopSitesPagerAdapter extends PagerAdapter {
     public TopSitesPagerAdapter(Context context,
                                 HomePager.OnUrlOpenListener onUrlOpenListener,
                                 HomePager.OnUrlOpenInBackgroundListener onUrlOpenInBackgroundListener) {
+        pages = new ArrayList<>(PAGES);
+
         this.context = context;
         this.onUrlOpenListener = onUrlOpenListener;
         this.onUrlOpenInBackgroundListener = onUrlOpenInBackgroundListener;
@@ -72,7 +75,12 @@ public class TopSitesPagerAdapter extends PagerAdapter {
 
     @Override
     public int getItemPosition(Object object) {
-        return PagerAdapter.POSITION_NONE;
+        if (pages.contains(object)) {
+            
+            return PagerAdapter.POSITION_UNCHANGED;
+        } else {
+            return PagerAdapter.POSITION_NONE;
+        }
     }
 
     @Override
@@ -88,8 +96,9 @@ public class TopSitesPagerAdapter extends PagerAdapter {
             count = 0;
         }
 
-        pages.clear();
-        final int pageDelta = count;
+        
+        
+        final int pageDelta = count - pages.size();
 
         if (pageDelta > 0) {
             final LayoutInflater inflater = LayoutInflater.from(context);
@@ -106,12 +115,12 @@ public class TopSitesPagerAdapter extends PagerAdapter {
             }
         } else if (pageDelta < 0) {
             for (int i = 0; i > pageDelta; i--) {
-                final TopSitesPage page = pages.getLast();
+                final TopSitesPage page = pages.get(pages.size() - 1);
 
                 
                 page.getAdapter().swapCursor(null, 0);
 
-                pages.removeLast();
+                pages.remove(pages.size() - 1);
             }
         } else {
             
